# video-search-elastic-jina-demo

./: .gitignore  PLAN.md  README.md  app.py  delete_videos.py  example-embed-video-jina.py  example_embed_video_jina_api_url.py  example_embed_video_local.py  example_similarity.py  ingest.py  main.py  outline.md  pyproject.toml  search.py  skills-lock.json  temp-try-embedding.py  vid-split-and-embed.py
elastic-start-local/: uninstall.sh
plans/: modality-selector.md
src/omnimodal_search/: embedding.py  es.py  video.py
static/: style.css
templates/: index.html  results.html
tests/: test_video.py
