[project]
name = "omnimodal-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=17.1.0",
    "elasticsearch>=9.4.1",
    "librosa>=0.11.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "scenedetect>=0.7",
    "tqdm>=4.0",
    "sentence-transformers>=5.6.0",
    "soundfile>=0.14.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
